--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -11,7 +11,7 @@
     <div>
         <div class="app__pull-left">
             <a show-profile="player" href>
-                <img show-profile="player" class="app-profile__image" ng-src="{{ player.avatar }}">
+                <img show-profile="player" class="app-profile__avatar" ng-src="{{ player.avatar }}">
             </a>
         </div>
         <div class="app-profile__name">
