--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -2,7 +2,7 @@
     <div class="app-profile">
         <div class="app__pull-left">
             <a show-profile="user" href>
-                <img class="app-profile__image" ng-src="{{ user.avatar }}">
+                <img class="app-profile__avatar" ng-src="{{ user.avatar }}">
             </a>
         </div>
         <div class="app-profile__name">
@@ -264,7 +264,7 @@
         <div class="app-modal__content">
             <div class="app-profile app-profile--challenger">
                 <div class="app__pull-left">
-                    <img class="app-profile__image" ng-src="{{ challenger.avatar }}">
+                    <img class="app-profile__avatar" ng-src="{{ challenger.avatar }}">
                 </div>
                 <div class="app-profile__name">
                     <a class="app-profile__name" href>{{ challenger.name }}</a>
