--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -10,7 +10,7 @@
             </a>
             <div class="app-profile">
                 <div class="app__pull-left">
-                    <img class="app-profile__image" ng-src="{{ data.avatar }}">
+                    <img class="app-profile__avatar" ng-src="{{ data.avatar }}">
                 </div>
                 <div class="app-profile__name">
                     <a class="app-profile__name" href>{{ data.name }}</a>
