--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -88,9 +88,11 @@
     </table>
 </div>
 
-<div class="app-game__toggle app-game__toggle--played mdl-shadow--2dp" ng-if="played.length">
+<div class="app-game__toggle app-game__toggle--played mdl-shadow--2dp">
     <div class="app-game__toggle-head"
          ng-click="togglePlayed()">
+        <i class="app-game__toggle-icon material-icons">description</i> 
+        <i class="app-game__toggle-icon app-game__toggle-icon--action material-icons">{{ showPlayed ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</i>
         <table class="app-table app-table--game app-table--game-played mdl-data-table mdl-js-data-table">
             <thead>
                 <tr>
@@ -131,7 +133,8 @@
 <div class="app-game__toggle app-game__toggle--messages mdl-shadow--2dp">
     <div class="app-game__toggle-head app-game__toggle-head--messages"
          ng-click="toggleMessages()">
-        <i class="app-icons material-icons">chat</i>
+        <i class="app-game__toggle-icon material-icons">chat</i>
+        <i class="app-game__toggle-icon app-game__toggle-icon--action material-icons">{{ showMessages ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</i>
         <span class="app-game__toggle-count" ng-if="unreadMessages">{{ unreadMessages }}</span>
     </div>
     <div class="app-game__toggle-content app-game__toggle-content--messages"
