fix toggle game mobile

--- a/public/app/components/templates/button-sound.html
+++ b/public/app/components/templates/button-sound.html
@@ -1,4 +1,5 @@
 <button class="app-button__sound mdl-button mdl-js-button mdl-button--fab mdl-button--colored mdl-js-ripple-effect mdl-color--accent"
+        ng-class="{'is-game': isGame }"
         ng-click="change()"
         ng-hide="hideSound">
     <span class="mdl-button__ripple-container">
